[gd_scene load_steps=2 format=3 uid="uid://riqfmggkqpfd"]

[ext_resource type="Script" path="res://addons/json_editor/scripts/json_editor.gd" id="1_xxxxx"]

[node name="JsonEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_xxxxx")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HeaderBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HeaderBar"]
layout_mode = 2
text = "File Path:"

[node name="FilePathEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/HeaderBar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter JSON file path..."

[node name="BrowseButton" type="Button" parent="MarginContainer/VBoxContainer/HeaderBar"]
unique_name_in_owner = true
layout_mode = 2
text = "Browse..."

[node name="LoadButton" type="Button" parent="MarginContainer/VBoxContainer/HeaderBar"]
unique_name_in_owner = true
layout_mode = 2
text = "Load"

[node name="SaveButton" type="Button" parent="MarginContainer/VBoxContainer/HeaderBar"]
unique_name_in_owner = true
layout_mode = 2
text = "Save"

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TreePanel" type="PanelContainer" parent="MarginContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HSplitContainer/TreePanel"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HSplitContainer/TreePanel/VBoxContainer"]
layout_mode = 2
text = "Tree View (Double click to edit):"

[node name="JsonTree" type="Tree" parent="MarginContainer/VBoxContainer/HSplitContainer/TreePanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
columns = 2
column_titles_visible = true

[node name="EditorPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HSplitContainer/EditorPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HSplitContainer/EditorPanel/VBoxContainer"]
layout_mode = 2
text = "JSON Text:"

[node name="JsonEdit" type="TextEdit" parent="MarginContainer/VBoxContainer/HSplitContainer/EditorPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
wrap_mode = 1
highlight_current_line = true
draw_tabs = true
draw_spaces = true

[node name="StatusLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1

[node name="FileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open File"
size = Vector2i(600, 400)
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 0
access = 2
filters = PackedStringArray("*.json")

[node name="EditDialog" type="Window" parent="."]
unique_name_in_owner = true
title = "Edit Value"
initial_position = 2
size = Vector2i(500, 300)
visible = false
exclusive = true
unresizable = true
transient = true
min_size = Vector2i(500, 300)

[node name="VBoxContainer" type="VBoxContainer" parent="EditDialog"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="GridContainer" type="GridContainer" parent="EditDialog/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20

[node name="Label" type="Label" parent="EditDialog/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Key:"

[node name="EditKey" type="LineEdit" parent="EditDialog/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(200, 30)

[node name="EditTypeLabel" type="Label" parent="EditDialog/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Type:"

[node name="EditTypeOption" type="OptionButton" parent="EditDialog/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="EditDialog/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Value:"

[node name="EditValue" type="LineEdit" parent="EditDialog/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(200, 30)

[node name="HBoxContainer" type="HBoxContainer" parent="EditDialog/VBoxContainer"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 20

[node name="DeleteButton" type="Button" parent="EditDialog/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.2, 0.2, 1)
text = "Delete"

[node name="AddNewButton" type="Button" parent="EditDialog/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.8, 0.2, 1)
text = "Add New Key-Value Pair"

[node name="EditConfirm" type="Button" parent="EditDialog/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Confirm"

[node name="EditCancel" type="Button" parent="EditDialog/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Cancel"

[node name="AddDialog" type="Window" parent="."]
unique_name_in_owner = true
title = "Add New Key-Value Pair"
initial_position = 2
size = Vector2i(500, 300)
visible = false
exclusive = true
unresizable = true
transient = true
min_size = Vector2i(500, 300)

[node name="VBoxContainer" type="VBoxContainer" parent="AddDialog"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="GridContainer" type="GridContainer" parent="AddDialog/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20

[node name="Label" type="Label" parent="AddDialog/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Key:"

[node name="AddKey" type="LineEdit" parent="AddDialog/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(200, 30)

[node name="Label2" type="Label" parent="AddDialog/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Type:"

[node name="TypeOption" type="OptionButton" parent="AddDialog/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Label3" type="Label" parent="AddDialog/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Value:"

[node name="AddValue" type="LineEdit" parent="AddDialog/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(200, 30)

[node name="HBoxContainer" type="HBoxContainer" parent="AddDialog/VBoxContainer"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 20

[node name="AddConfirm" type="Button" parent="AddDialog/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Confirm"

[node name="AddCancel" type="Button" parent="AddDialog/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Cancel"

[connection signal="text_submitted" from="MarginContainer/VBoxContainer/HeaderBar/FilePathEdit" to="." method="_on_path_text_submitted"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HeaderBar/BrowseButton" to="FileDialog" method="popup_centered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HeaderBar/LoadButton" to="." method="_on_load_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HeaderBar/SaveButton" to="." method="_on_save_pressed"]

[connection signal="file_selected" from="FileDialog" to="." method="_on_file_selected"]
[connection signal="close_requested" from="EditDialog" to="." method="_on_edit_cancel"]
[connection signal="pressed" from="EditDialog/VBoxContainer/HBoxContainer/DeleteButton" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="EditDialog/VBoxContainer/HBoxContainer/AddNewButton" to="." method="_on_add_new_pressed"]
[connection signal="pressed" from="EditDialog/VBoxContainer/HBoxContainer/EditConfirm" to="." method="_on_edit_confirm"]
[connection signal="pressed" from="EditDialog/VBoxContainer/HBoxContainer/EditCancel" to="." method="_on_edit_cancel"]

[connection signal="close_requested" from="AddDialog" to="." method="_on_add_cancel"]
[connection signal="pressed" from="AddDialog/VBoxContainer/HBoxContainer/AddConfirm" to="." method="_on_add_confirm"]
[connection signal="pressed" from="AddDialog/VBoxContainer/HBoxContainer/AddCancel" to="." method="_on_add_cancel"]